# MarleySpoonRecipeSelector

./: .gitignore  README.md  app.html  combined.json  index.html  pyproject.toml  recipe_urls.txt
src/: download_recipe.py  json_combiner.py  recipe_parser.py
